--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.0.0-alpha.12",
-    "vue": "^3.2.22"
+    "vue": "^3.2.22",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@types/node": "^16.11.9",
     "@vitejs/plugin-vue": "^1.9.3",
-    "vite": "^2.6.14",
+    "md5": "^2.3.0",
+    "node-sass": "^6.0.1",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "typescript": "^4.4.3",
+    "vite": "^2.6.14",
     "vue-tsc": "^0.3.0"
   }
 }
