--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^3.0.0-alpha.12",
     "vue": "^3.2.22",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.9",
@@ -21,6 +23,7 @@
     "sass-loader": "^12.3.0",
     "typescript": "^4.4.3",
     "vite": "^2.6.14",
+    "vue-i18n": "^9.2.0-beta.20",
     "vue-tsc": "^0.3.0"
   }
 }
