--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^3.0.0-alpha.12",
+    "axios": "^0.24.0",
+    "mockjs": "^1.1.0",
     "vue": "^3.2.22",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
@@ -23,6 +25,7 @@
     "sass-loader": "^12.3.0",
     "typescript": "^4.4.3",
     "vite": "^2.6.14",
+    "vite-plugin-mock": "^2.9.6",
     "vue-i18n": "^9.2.0-beta.20",
     "vue-tsc": "^0.3.0"
   }
