--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@types/node": "^16.11.9",
     "@vitejs/plugin-vue": "^1.9.3",
+    "eslint": "^8.4.1",
+    "eslint-plugin-vue": "^8.2.0",
     "md5": "^2.3.0",
     "node-sass": "^6.0.1",
     "sass": "^1.43.4",
