--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-ant-design-admin",
+  "repository": "https://github.com/edgardeng/vue-ant-design-admin",
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
@@ -9,22 +10,28 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
-    "ant-design-vue": "^3.0.0-alpha.12",
+    "acorn": "^8.6.0",
+    "cropperjs": "^1.5.12",
+    "ant-design-vue": "^3.0.0-alpha.16",
     "axios": "^0.24.0",
     "mockjs": "^1.1.0",
     "vue": "^3.2.22",
     "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "echarts": "^5.2.2",
+    "nprogress": "^0.2.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.9",
+    "@types/mockjs": "^1.0.4",
+    "@types/node": "^17.0.0",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "md5": "^2.3.0",
     "node-sass": "^6.0.1",
     "sass": "^1.43.4",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^12.4.0",
     "typescript": "^4.4.3",
     "vite": "^2.6.14",
     "vite-plugin-mock": "^2.9.6",
